# FlClash_backup

./: Makefile
.github/workflows/: sync-upstream.yml
android/app/src/main/kotlin/com/follow/clash/plugins/: VpnPlugin.kt
android/core/: build.gradle.kts
android/core/src/main/cpp/: CMakeLists.txt  core.cpp  jni_helper.h  libclash.h
android/core/src/main/java/com/follow/clash/core/: Core.kt  TunInterface.kt
core/: android_bride.go  android_bride.h  lib_android.go
core/android-bride/: bride.go
lib/: main.dart  state.dart
lib/clash/: interface.dart  lib.dart
